# bencher

./: .gitignore  Cargo.toml  README.md  build.rs  config.yaml
src/: config.rs  cpu_hasher.rs  gpu_hasher.rs  logger.rs  main.rs  miner.rs  ocl.rs  poc_hashing.rs  request.rs  scheduler.rs  shabal256.rs
src/c/: common.h  mshabal_128_avx.c  mshabal_128_avx.h  mshabal_128_sse2.c  mshabal_128_sse2.h  mshabal_256_avx2.c  mshabal_256_avx2.h  mshabal_512_avx512f.c  mshabal_512_avx512f.h  noncegen_128_avx.c  noncegen_128_avx.h  noncegen_128_sse2.c  noncegen_128_sse2.h  noncegen_256_avx2.c  noncegen_256_avx2.h  noncegen_512_avx512f.c  noncegen_512_avx512f.h
src/com/: client.rs
src/ocl/: kernel.cl
