[package]
name = "bencher"
version = "1.0.0"
license = "GPL-3.0"
authors = ["JohnnyFFM EEBE108564A6E62C5A80D697127E61FDA6AB8FF710B5CAC1D379FA5A2A1132D4"]
edition = "2018"
description = """
Bencher - a GPU/CPU PoW Miner for PoC written in Rust
"""
build = "build.rs"
repository = "https://github.com/JohnnyFFM/bencher"
documentation = "https://github.com/JohnnyFFM/bencher"
keywords = ["poc", "miner", "rust","cryptocurrency"]
readme = "README.md"

[features]
default = ["opencl", "simd"]
opencl = ["ocl-core"]
simd = []

[dependencies]
aligned_alloc = "0.1.3"
bytes = "0.4.11"
cfg-if = "0.1.6"
chrono = "0.4.6"
clap = "2.32.0"
core_affinity = "0.5.9"
crossbeam-channel = "0.3.8"
futures = "0.1"
hex = "0.3.1"
hostname = "0.1.5"
libc = "0.1"
log = "0.4"
log4rs = { version = "0.8", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
num_cpus = "1.9"
ocl-core = { version = "0.11.1", optional = true } 
page_size = "0.4.1"
pbr = "1.0.1"
rand = "0.6"
rayon = "1.0.3"
raw-cpuid = "6.1.0"
reqwest = { version = "0.9.9", default-features = false, features = ["rustls-tls"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
stopwatch = "0.0.7"
tokio = "0.1"
url = "1.7"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.0", features = ["std","fileapi","securitybaseapi","errhandlingapi"] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
rust-crypto = "0.2.36"
